Added Image classification example

--- a/automl_image_object_detection_export_edge.ipynb
+++ b/automl_image_object_detection_export_edge.ipynb
@@ -62,7 +62,7 @@
     "## Overview\n",
     "\n",
     "\n",
-    "This tutorial demonstrates how to use the Vertex AI SDK to create image object detection models to export as an Edge model using an AutoML model."
+    "This tutorial demonstrates how to use the Vertex AI SDK to create image object detection models to export as an Edge model using AutoML."
    ]
   },
   {
