udpated the classification notebook

--- a/automl_image_classification_export_edge.ipynb
+++ b/automl_image_classification_export_edge.ipynb
@@ -543,7 +543,7 @@
     "\n",
     "The `run` method when completed returns the `Model` resource.\n",
     "\n",
-    "The execution of the training pipeline will take around 2 hours"
+    "The execution of the training pipeline will take around 50 minutes"
    ]
   },
   {
