--- a/automl_image_classification_export_edge.ipynb
+++ b/automl_image_classification_export_edge.ipynb
@@ -29,7 +29,7 @@
     "id": "title"
    },
    "source": [
-    "# AutoML training image image classification model for export to edge\n",
+    "# AutoML training image classification model for export to edge\n",
     "\n"
    ]
   },
@@ -186,7 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "PROJECT_ID = \"pv-mlops-demo\"  # @param {type:\"string\"}\n",
+    "PROJECT_ID = \"{your-project-id}\"  # @param {type:\"string\"}\n",
     "\n",
     "# Set the project id\n",
     "! gcloud config set project {PROJECT_ID}"
@@ -403,7 +403,8 @@
    },
    "outputs": [],
    "source": [
-    "IMPORT_FILE = \"gs://pv-visual-inspection-ai-auto/visual_inspection/parts_label.csv\""
+    "#upload parts_label to a storage location\n",
+    "IMPORT_FILE = \"gs://{your-storage-bucket}/visual_inspection/parts_label.csv\""
    ]
   },
   {
