Moved notebooks to folder so that tflite folder doesn't conflict if you run both notebooks at the same time

--- a/classification/automl_image_classification_export_edge.ipynb
+++ b/classification/automl_image_classification_export_edge.ipynb
@@ -186,7 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "PROJECT_ID = \"{your-project-id}\"  # @param {type:\"string\"}\n",
+    "PROJECT_ID = \"pv-mlops-demo\"  # @param {type:\"string\"}\n",
     "\n",
     "# Set the project id\n",
     "! gcloud config set project {PROJECT_ID}"
@@ -403,7 +403,7 @@
    },
    "outputs": [],
    "source": [
-    "#upload parts_label to a storage location and use that below\n",
+    "#upload parts_label to a storage location\n",
     "IMPORT_FILE = \"gs://pv-visual-inspection-ai-auto/visual_inspection/parts_label.csv\""
    ]
   },
