--- a/object_detection/automl_image_object_detection_export_edge.ipynb
+++ b/object_detection/automl_image_object_detection_export_edge.ipynb
@@ -325,7 +325,8 @@
    },
    "outputs": [],
    "source": [
-    "BUCKET_URI = f\"gs://your-bucket-name-{PROJECT_ID}-unique\"  # @param {type:\"string\"}"
+    "#change bucket name below\n",
+    "BUCKET_URI = f\"gs://automl-vision-workshop-{PROJECT_ID}\"  # @param {type:\"string\"}"
    ]
   },
   {
