Moved notebooks to folder so that tflite folder doesn't conflict if you run both notebooks at the same time

--- a/classification/automl_image_classification_export_edge.ipynb
+++ b/classification/automl_image_classification_export_edge.ipynb
@@ -186,7 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "PROJECT_ID = \"pv-mlops-demo\"  # @param {type:\"string\"}\n",
+    "PROJECT_ID = \"{your-project-id}\"  # @param {type:\"string\"}\n",
     "\n",
     "# Set the project id\n",
     "! gcloud config set project {PROJECT_ID}"
@@ -305,6 +305,7 @@
    },
    "outputs": [],
    "source": [
+    "#change bucket name below\n",
     "BUCKET_URI = f\"gs://automl-vision-workshop-{PROJECT_ID}\"  # @param {type:\"string\"}"
    ]
   },
