--- a/object_detection/automl_image_object_detection_export_edge.ipynb
+++ b/object_detection/automl_image_object_detection_export_edge.ipynb
@@ -825,21 +825,11 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "TensorFlow 2 (Local)",
-   "language": "python",
-   "name": "local-tf2"
+   "display_name": "",
+   "name": ""
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "name": ""
   }
  },
  "nbformat": 4,
