--- a/classification/automl_image_classification_export_edge.ipynb
+++ b/classification/automl_image_classification_export_edge.ipynb
@@ -404,7 +404,7 @@
    },
    "outputs": [],
    "source": [
-    "#upload parts_label to a storage location\n",
+    "#upload parts_label to a storage location in your project and use that bucket below\n",
     "IMPORT_FILE = \"gs://pv-visual-inspection-ai-auto/visual_inspection/parts_label.csv\""
    ]
   },
